2000-10-23  Radek Doulik  <rodo@helixcode.com>

	* htmlengine.c (parse_d): set divAlign to left before parsing
	actual alignment
	(parse_p): likewise

	* htmlengine-edit.h: publicate in scope of gtkhtml sources some
	usefull functions for translating between types

	* htmlengine-save.c (html_engine_save_get_paragraph_style): new
	helper function
	(html_engine_save_get_paragraph_align): likewise

	* htmlclueflow.c (save): fixed typo

	* gtkhtml.h: gtk_html_load_from_string const safe

	* htmlengine.c (parse_one_token): commented out warning

	* gtkhtml.c (cursor_move): not abort with bad params, only warn
	(move_selection): likewise
	(scroll): likewise
	(gtk_marshal_NONE__INT_INT_FLOAT): added new marshaler

2000-10-20  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-save.c (html_engine_save_get_sample_body): new
	function, used by component for sample views
	(get_body): helper function extracted from write_header
	(write_header): use get_body

	* htmlengine-edit-insert.c (html_engine_insert): try to make magic
	links also after '>', ')' - this could simplify of mail adresses,
	for example Ape <primate@helixcode.com> should do the right thing
	now ;-)

	* htmlengine-edit.c (html_is_in_word): changed back from isalnum
	to isalpha

2000-10-19  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (bin_search_eq_or_lower_index): fixed to not access
	a [-1]

	* gtkhtml-input.c (focus_out): add focus_out signal handler for
	entry
	(set_html_focus): new helper function to set focus back to html
	widget
	(gtk_html_input_line_deactivate): don't set focus to html widget,
	leave that on set_html_focus
	(key_press_event): use set_html_focus
	(focus_out): call set_html_focus in idle callback (otherwise focus
	will be broken)

2000-10-18  Radek Doulik  <rodo@helixcode.com>

	* keybindingsrc.ms: like for emacs

	* keybindingsrc.emacs: changed indentation bindings

	* gtkhtml.c (command): reset html->binding_handled to TRUE in
	editable part
