@@ -1,3 +1,7 @@
+2000-10-24  Radek Doulik  <rodo@helixcode.com>
+
+	* htmlengine-save.c (get_body): added background attribute
+
 2000-10-23  Radek Doulik  <rodo@helixcode.com>
 
 	* htmlengine.c (parse_d): set divAlign to left before parsing
